# itemControl

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/itemcontrol/: __init__.py  __main__.py  about.py  dashboard.py  database.py  domain.py  repository.py  service.py  settings.py  ui.py
src/itemcontrol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_about.py  test_computers.py  test_dashboard.py  test_database.py  test_release_tools.py  test_service.py
tools/: build_release.py  release_notes.py
